[gd_scene load_steps=2 format=3 uid="uid://lj2tu1d6oo1c"]

[ext_resource type="Script" uid="uid://dao6jpjqnd6dd" path="res://scripts/gd/obj_randomizer.gd" id="1_7sy2s"]

[node name="OBJ_folder" type="Node2D"]
script = ExtResource("1_7sy2s")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-155, 0)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(163, -83)

[node name="Marker2D3" type="Marker2D" parent="."]
position = Vector2(133, 102)

[node name="Marker2D4" type="Marker2D" parent="."]
position = Vector2(-258, -73)

[node name="Marker2D5" type="Marker2D" parent="."]
position = Vector2(60, -156)

[node name="Marker2D6" type="Marker2D" parent="."]
position = Vector2(30, 29)

[node name="Marker2D7" type="Marker2D" parent="."]
position = Vector2(-318, -183)

[node name="Marker2D8" type="Marker2D" parent="."]
position = Vector2(0, -266)

[node name="Marker2D9" type="Marker2D" parent="."]
position = Vector2(-30, -81)

[node name="Marker2D10" type="Marker2D" parent="."]
position = Vector2(-421, -256)

[node name="Marker2D11" type="Marker2D" parent="."]
position = Vector2(-103, -339)

[node name="Marker2D12" type="Marker2D" parent="."]
position = Vector2(-133, -154)
